--- a/vignettes/lasR4.Rmd
+++ b/vignettes/lasR4.Rmd
@@ -304,7 +304,7 @@ In this complex pipeline, the point cloud is normalized and written to new files
 
 ```r
 read = reader(ctg)
-del = triangulate(filter = "-keep_class 2")
+del = triangulate(filter = keep_ground())
 norm = transform_with(del)
 dtm = rasterize(1, del)
 chm = rasterize(1, "max")
@@ -316,19 +316,14 @@ ans = processor(pipeline, progress = TRUE)
 ```
 
 ```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", out.width="50%"}
-m_lasr = c(0,191.41, 362.51, 593.35, 896.25, 1194.72, 1818.00, 2323.06, 2323.06, 2323.06, 2323.06, 2323.06, 2323.06, 2323.06, 2323.06, 2323.06, 2323.06, 2323.06, 2247.46, 2122.34,
-2192.39, 2192.39, 2192.39, 2197.03, 2197.80, 2198.83, 2199.87,2181.38, 2181.38, 2181.38, 2221.91, 1523.74, 1741.71, 1823.69, 1823.69, 1823.69, 1823.69, 1741.83, 1741.83, 1741.83,
-1741.83, 1741.83, 1454.66, 1703.53, 1928.16, 2152.36, 2276.37,2506.08, 2506.08, 2506.08, 2506.08, 2506.08, 2506.08, 2506.08,2506.08, 2506.08, 2506.08, 2506.08, 2277.12, 2324.82,
-2324.82, 2324.82, 2324.82, 2324.82, 2324.82, 2324.82, 2324.82, 2296.59, 2296.59, 2296.59, 2323.40, 1519.98, 1738.68, 1900.92, 2009.98, 2009.98, 2009.98, 2009.98, 2009.98, 1901.16,
-1901.16, 1901.16, 1901.16, 1901.16, 1901.16, 765.81, 768.27)
+f = system.file("extdata/benchmarks", "lasR_test_4_FFGG-1009803.data", package = "lasR")
+m_lasr = read.table(f)$V1
 
-m_lidr = c(0,111.37, 370.23, 1302.22, 2092.03, 1836.73, 1777.86, 1778.63, 1772.64, 2176.11, 1783.72, 1788.08, 2751.04, 3687.52, 4444.45, 4444.45, 4444.45, 4444.45, 4444.45, 5891.63, 
-6243.98, 5576.12, 5058.68, 6276.28, 5694.89, 5694.89, 5694.89, 5694.89, 4708.56, 6252.17, 7429.84, 5487.51, 5091.87, 4924.78, 2821.48, 4750.88, 4750.88, 4750.88, 4750.88, 4750.88, 
-4750.88, 4750.88, 4750.88, 4750.88, 3746.96, 4379.66, 4379.66, 4379.66, 5547.57, 5956.35, 5956.35, 5956.35, 5956.35, 5956.35, 5956.35, 5956.35,5956.35, 5956.35, 4058.14, 4737.40, 
-4737.40, 4737.40, 5196.26, 5196.26,0)
+f = system.file("extdata/benchmarks", "lidR_test_4_FFGG-1009803.data", package = "lasR")
+m_lidr = read.table(f)$V1
 
-t_lasr = (1:length(m_lasr)-1)*5/60
-t_lidr = (1:length(m_lidr)-1)*15/60
+t_lasr = (1:length(m_lasr)-1)*2/60
+t_lidr = (1:length(m_lidr)-1)*2/60
 
 col1 = rgb(0, 0.5, 1, alpha = 0.5)
 col2 = rgb(1, 0, 0, alpha = 0.5)
@@ -338,7 +333,7 @@ y = m_lidr/1000
 
 par(mar = c(4,4,1,1))
 
-plot(x, y, type = "n", ylim = c(0, max(y)), ylab = "Memory (GB)", xlab = "Time (min)", main = "Intel Core i7-5600U CPU")
+plot(x, y, type = "n", ylim = c(0, max(y)), ylab = "Memory (GB)", xlab = "Time (min)", main = "Intel Core i7-1355U")
 
 polygon(c(x, rev(x)), c(rep(0, length(x)), rev(y)), col = col1, border = NA)
 lines(x, y, col = "blue", lwd = 2)
