--- a/vignettes/lasR2.Rmd
+++ b/vignettes/lasR2.Rmd
@@ -195,6 +195,10 @@ ans = processor(pipeline)
 terra::plot(ans, mar = c(1, 1, 1, 3), col = heat.colors(15))
 ```
 
+<blockquote style="background-color: #d6e9f9; border-left: 5px solid #428bca; padding: 10px;font-size: 14px; border-radius: 5px;">
+The `lasR` package introduced the concept of a buffered area-based approach to enhance the resolution of prediction maps. However, this concept is not covered in detail in this tutorial. For further information, readers can refer to the [dedicated article](baba.html)
+</blockquote>
+
 ## Transform with
 
 Another way to use a Delaunay triangulation is to transform the point cloud. Users can add or subtract the triangulation from the point cloud, effectively normalizing it. Unlike the `lidR` package, there is no high-level function with names like `normalize_points()`. Instead, `lasR` is composed of low-level functions that offer more versatility.
@@ -387,7 +391,7 @@ pipeline = read + del + chm + chm2 +  seed + tree
 ans = processor(pipeline)
 ```
 
-```{r, fig.show="hold", fig.height=6, out.width="50%"}
+```{r, fig.show="hold", fig.width=4}
 col = grDevices::colorRampPalette(c("blue", "cyan2", "yellow", "red"))(25)
 terra::plot(ans$rasterize, col = col, mar = c(1, 1, 1, 3))
 terra::plot(ans$pit_fill, col = col, mar = c(1, 1, 1, 3))
