--- a/vignettes/lasR4.Rmd
+++ b/vignettes/lasR4.Rmd
@@ -22,9 +22,9 @@ col3 = rgb(0.5, 0.5, 1, alpha = 0.5)
 col4 = rgb(1, 0, 1, alpha = 0.5)
 ```
 
-This vignette presents benchmarks for various tasks using `lidR` and `lasR`. The x-axis represents the time spent on the task, while the y-axis represents the memory used for the task.
+This vignette presents benchmarks for various tasks using `lidR` and `lasR`. The x-axis represents the time spent on the task, while the y-axis represents the memory used for the task. The benchmarks are re-run for every version.
 
-- **Number of files:** 4
+- **Number of files:** 4 (spatially indexed with `.lax` files)
 - **Number of points:** 119 million (30 million per file)
 - **Coverage:** 10.3 km² (2.5 km² per file)
 - **Density:** 12 points/m²
@@ -32,7 +32,7 @@ This vignette presents benchmarks for various tasks using `lidR` and `lasR`. The
 - **CPU:** 
   - Intel Core i7-5600U CPU (5th generation Intel Core) 
   - Intel Core i7-1355U (13th generation Intel Core) 
-- **Date:** update 2024-02-29
+- **Date:** update 2024-03-01
 - **Version:** 
   - lidR 4.1.1
   - lasR 0.2.0
@@ -50,12 +50,15 @@ read_benchmarks = function(pkg, test)
 {
   list(
   read_benchmark(paste0(pkg, "_test_", test, "_jr-ThinkPad-T450s.data")),
-  read_benchmark(paste0(pkg, "_test_", test, "_FFGG-1009803.data")))
+  read_benchmark(paste0(pkg, "_test_", test, "_multifile_false_FFGG-1009803.data")),
+  read_benchmark(paste0(pkg, "_test_", test, "_multifile_true_jr-ThinkPad-T450s.data")),
+  read_benchmark(paste0(pkg, "_test_", test, "_multifile_true_FFGG-1009803.data")))
 }
 
 read_benchmark = function(file)
 {
   f = system.file("extdata/benchmarks", file, package = "lasR")
+  if (!file.exists(f)) return(NULL)
   read.table(f)$V1  
 }
 
@@ -64,7 +67,7 @@ plot_benchmark = function(lidr, lasr)
   vlidr = "lidR 4.1.1"
   vlasr = paste("lasR", packageVersion("lasR"))
   
-  cpu_name = c("Intel Core i7-5600U", "Intel Core i7-1355U")
+  cpu_name = c("i7-5600U - 1 core", "i7-1355U - 1 core", "i7-5600U - 4 cores", "i7-1355U - 4 cores")
   
   mmax = 0
   tmax = 0
@@ -79,41 +82,59 @@ plot_benchmark = function(lidr, lasr)
   }
   mmax = mmax/1000
   
+  unit = "min"
+  divider = 60
+  if (tmax < 1.5)
+  {
+    tmax = tmax*60
+    unit = "sec"
+    divider = 1
+  }
+  
   par(mar = c(4,4,1,1), cex = 0.8)
     
   for (i in seq_along(lidr))
   {
-    if (is.null(lidr[[i]])) next
-    m_lidr = lidr[[i]]
-    m_lasr = lasr[[i]]
-    t_lasr = (1:length(m_lasr)-1)*2/60
-    t_lidr = (1:length(m_lidr)-1)*2/60
+    plot(0, 0, type = "n", xlim = c(0, tmax), ylim = c(0, mmax), ylab = "Memory (GB)", xlab = paste0("Time (", unit, ")") , main = cpu_name[i])
+    if (is.null(lidr[[i]]) && is.null(lasr[[i]])) next
     
-    x = t_lidr
-    y = m_lidr/1000
-    plot(x, y, type = "n", xlim = c(0, tmax), ylim = c(0, mmax), ylab = "Memory (GB)", xlab = "Time (min)", main = cpu_name[i])
-    polygon(c(x, rev(x)), c(rep(0, length(x)), rev(y)), col = col1, border = NA)
-    lines(x, y, col = "blue", lwd = 2)
+    if (!is.null(lidr[[i]]))
+    {
+      m_lidr = lidr[[i]]
+      t_lidr = (1:length(m_lidr)-1)*2/divider
+      
+      x = t_lidr
+      y = m_lidr/1000
+      
+      polygon(c(x, rev(x)), c(rep(0, length(x)), rev(y)), col = col1, border = NA)
+      lines(x, y, col = "blue", lwd = 2)
+    }
     
-    x = t_lasr
-    y = m_lasr/1000
-    polygon(c(x, rev(x)), c(rep(0, length(x)), rev(y)), col = col2 , border = NA)
-    lines(x, y, col = "red", lwd = 2)
+    if (!is.null(lasr[[i]]))
+    {
+      m_lasr = lasr[[i]]
+      t_lasr = (1:length(m_lasr)-1)*2/divider
+      
+      x = t_lasr
+      y = m_lasr/1000
+      polygon(c(x, rev(x)), c(rep(0, length(x)), rev(y)), col = col2 , border = NA)
+      lines(x, y, col = "red", lwd = 2)
+    }
     
-    legend("topleft", legend = c(vlidr, vlasr), fill = c(col1, col2), border = NA)
+    legend("topright", legend = c(vlidr, vlasr), fill = c(col1, col2), border = NA)
   }
 }
 ```
 
-### lidR
+### Code
 
 ```r
+# lidR
+future::plan(future::multicore(...))
 chm = rasterize_canopy(ctg, 1, p2r())
-```
 
-### lasR
-
-```r
+# lasR
+set_parallel_strategy(...)
 pipeline = reader(ctg) + rasterize(1, "max")
 processor(pipeline)
 ```
@@ -128,22 +149,15 @@ plot_benchmark(m_lidr, m_lasr)
 
 ## Digital Terrain Model
 
-```{r, echo=FALSE}
-f = c("/home/jr/Documents/Ulaval/ALS data/BCTS/092L073113_BCTS_2.laz", 
-"/home/jr/Documents/Ulaval/ALS data/BCTS/092L073114_BCTS_2.laz", 
-"/home/jr/Documents/Ulaval/ALS data/BCTS/092L073131_BCTS_2.laz", 
-"/home/jr/Documents/Ulaval/ALS data/BCTS/092L073132_BCTS_2.laz")
-```
-
-### lidR
+### Code
 
 ```r
+# lidR
+future::plan(future::multicore(...))
 dtm = rasterize_terrain(ctg, 1, tin())
-```
 
-### lasR
-
-```r
+# lasR
+set_parallel_strategy(...)
 tri = triangulate(filter = keep_ground())
 pipeline = reader(ctg, filter = keep_ground()) + tri + rasterize(1, tri)
 processor(pipeline)
@@ -157,23 +171,23 @@ m_lidr = read_benchmarks("lidR", 2)
 plot_benchmark(m_lidr, m_lasr)
 ```
 
-## Multiple raster
+## Multiple rasters
 
 The gain in terms of computation time is much more significant when running multiple stages in a single pipeline because files are read only once in `lasR` but multiple times in `lidR`. Here, all operations are executed in a single pass at the C++ level, resulting in more efficient memory management.
 
-### lidR
+### Code
 
 ```r
+# lidR
+future::plan(future::multicore(...))
 custom_function = function(z,i) { list(avgz = mean(z), avgi = mean(i)) }
 ctg = readLAScatalog(f)
 chm = rasterize_canopy(ctg, 1, p2r())
 met = pixel_metrics(ctg, ~custom_function(Z, Intensity), 20)
 den = rasterize_density(ctg, 5)
-```
 
-### lasR
-
-```r
+# lasR
+set_parallel_strategy(...)
 custom_function = function(z,i) { list(avgz = mean(z), avgi = mean(i)) }
 read = reader(folder)
 chm = rasterize(1, "max")
@@ -183,11 +197,58 @@ pipeline = read + chm + met + den
 processor(pipeline)
 ```
 
-
+### Result
 
 ```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", fig.width=4}
 m_lasr = read_benchmarks("lasR", 3)
 m_lidr = read_benchmarks("lidR", 3)
+plot_benchmark(m_lidr, m_lasr)
+```
+
+## Normalization
+
+### Code
+
+```r
+# lidR
+future::plan(future::multicore(...))
+opt_output_files(ctg) <- paste0(tempdir(), "/*_norm")
+norm = normalize_height(ctg, tin())
+
+# lasR
+set_parallel_strategy(...)
+pipeline = reader(f) + normalize() + write_las()
+processor(pipeline)
+```
+
+### Result
+
+```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", fig.width=4}
+m_lasr = read_benchmarks("lasR", 5)
+m_lidr = read_benchmarks("lidR", 5)
+plot_benchmark(m_lidr, m_lasr)
+```
+
+## Local maximum
+
+### Code
+
+```r
+# lidR
+future::plan(future::multicore(...))
+tree = locate_trees(ctg, lmf(5))
+
+# lasR
+set_parallel_strategy(...)
+pipeline = reader(f) + local_maximum(5)
+processor(pipeline)
+```
+
+### Result
+
+```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", fig.width=4}
+m_lasr = read_benchmarks("lasR", 6)
+m_lidr = read_benchmarks("lidR", 6)
 plot_benchmark(m_lidr, m_lasr)
 ```
 
@@ -196,6 +257,7 @@ plot_benchmark(m_lidr, m_lasr)
 
 In this complex pipeline, the point cloud is normalized and written to new files. A Digital Terrain Model (DTM) is produced, a Canopy Height Model (CHM) is built, and individual trees are detected. These detected trees are then used as seeds for a region-growing algorithm that segments the trees. The `lasR` pipeline can handle hundreds of laser tiles, while `lidR` may struggle to apply the same pipeline, especially during tree segmentation.
 
+## Code
 
 ```r
 read = reader(ctg)
@@ -210,8 +272,10 @@ pipeline = read + del + norm + write + dtm + chm +  seed + tree
 ans = processor(pipeline, progress = TRUE)
 ```
 
+## Result
+
 ```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", fig.width=4}
-m_lasr = list(NULL, read_benchmark("lasR_test_4_FFGG-1009803.data"))
-m_lidr = list(NULL, read_benchmark("lidR_test_4_FFGG-1009803.data"))
+m_lasr = read_benchmarks("lasR", 4)
+m_lidr = read_benchmarks("lidR", 4)
 plot_benchmark(m_lidr, m_lasr)
 ```
